[package]
name = "rnr"
version = "0.1.0"
edition = "2021"
description = "A compiler toolchain for the RnR language: parser, type checker, tree-walking interpreter, and MIPS code generator."
license = "MIT"
keywords = ["compiler", "mips", "interpreter", "type-checker", "parser"]
categories = ["compilers"]

[dependencies]
indented = "0.1.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
regex = "1"
mips = { git = "https://vesuvio-git.neteq.ltu.se/pln/mips.git", features = ["env_log"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "rnr"
path = "src/bin/rnr.rs"
